--- a/index..html
+++ b/index..html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 
 </head>
-<body>
+<!-- <body>
 
 	<h3 class="heading">Heading</h3>
 	<h3>Heading</h3>
@@ -16,7 +16,14 @@
 
 	<div id="block">
 	<p class="headin@g">Lorem ipsum.</p>
-	</div>
-	
+	</div> -->
+	<section></section>
+ <section id="header">
+ 	
+ 	<h1 Heading
+ 	</h1>
+ </section>
+ <section></section>
+
 </body>
 </html>
